# restproject

./: pyproject.toml
rest/: Procfile  db.sqlite3
rest/api/: serilizers.py  urls.py  views.py
rest/menu/: admin.py
rest/menu/migrations/: 0001_initial.py
rest/menu/models/: menu.py
rest/rest/: settings.py  urls.py
rest/restaurant/: admin.py
rest/restaurant/migrations/: 0001_initial.py
rest/restaurant/models/: restaurant.py
rest/users/: admin.py
rest/users/migrations/: 0001_initial.py
rest/users/models/: users.py
